--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ h3 {
 #masthead {
   position: fixed;
   z-index: 99;
-  width: 100%;`
+  width: 100%;
   margin: 0 0 30px;
   overflow: auto;
   color: #fff;
